--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -240,6 +240,7 @@ crossorigin=""></script>
 
 
 <script src="../js/main.js" type="text/javascript"></script>
+<script src="../js/news__nouveautes.js" type="text/javascript"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140166656-1"></script>
