--- a/html/_/supporters.html
+++ b/html/_/supporters.html
@@ -142,6 +142,7 @@ crossorigin=""></script>
 
 
 <script src="../js/main.js" type="text/javascript"></script>
+<script src="../js/supporters.js" type="text/javascript"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140166656-1"></script>
