--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -58,6 +58,23 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h3 id="heading14"><span lang="fr">5 janvier 2020</span><span lang="en">5<sup>th</sup> january 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
+          </h3>
+          <p>
+              <a class="interpop" href="../ingredients/Benzophenone__Benzophénone.html"><span lang="en">Benzophenone (CAS N°: 119-61-9)</span><span lang="fr">Benzophénone (CAS N°: 119-61-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Acetophenone__Acétophénone.html"><span lang="en">Acetophenone (CAS N°: 98-86-2)</span><span lang="fr">Acétophénone (CAS N°: 98-86-2)</span></a>
+              <br><a class="interpop"  href="../ingredients/Dimetol®__Dimetol®.html"><span lang="en">Dimetol<sup>®</sup> (CAS N°: 113254-34-7)</span><span lang="fr">Dimétol<sup>®</sup> (CAS N°: 113254-34-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Grisalva®__Grisalva®.html"><span lang="en">Grisalva<sup>®</sup> (CAS N°: 68611-23-4)</span><span lang="fr">Grisalva<sup>®</sup> (CAS N°: 68611-23-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Delta-3-Carene__Carène-Delta-3.html"><span lang="en">Delta-3-Carene (CAS N°: 13466-78-9)</span><span lang="fr">Carène-Delta-3 (CAS N°: 13466-78-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Dalmatian_Sage_EO__Sauge_Officinale_HE.html"><span lang="en">Dalmatian Sage EO (CAS N°: 8022-56-8)</span><span lang="fr">Sauge Officinale HE (CAS N°: 8022-56-8)</span></a>
+              <br><a class="interpop"  href="../ingredients/Tobacco_Absolute__Tabac_Absolue.html"><span lang="en">Tobacco Absolute (CAS N°: 8037-19-2)</span><span lang="fr">Tabac Absolue (CAS N°: 8037-19-2)</span></a>
+          </p>
+          <p><span lang="fr"> Arrivée de la page "Les nouveautés" résumant les mises à jours du site.</span><span lang="en">Launching of the windows "News"</span> </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h3 id="heading13"><span lang="fr">15 décembre 2019</span><span lang="en">15<sup>th</sup> december 2019</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h3>
