--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -70,7 +70,7 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Dalmatian_Sage_EO__Sauge_Officinale_HE.html"><span lang="en">Dalmatian Sage EO (CAS N°: 8022-56-8)</span><span lang="fr">Sauge Officinale HE (CAS N°: 8022-56-8)</span></a>
               <br><a class="interpop"  href="../ingredients/Tobacco_Absolute__Tabac_Absolue.html"><span lang="en">Tobacco Absolute (CAS N°: 8037-19-2)</span><span lang="fr">Tabac Absolue (CAS N°: 8037-19-2)</span></a>
           </p>
-          <p><span lang="fr"> Arrivée de la page "Les nouveautés" résumant les mises à jours du site.</span><span lang="en">Launching of the windows "News"</span> </p>
+          <p><span lang="fr"> Arrivée de la page "Les nouveautés" résumant les mises à jour du site.</span><span lang="en">Launching of the windows "News"</span> </p>
         </div>
       </li>
       <li>
