--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -46,7 +46,7 @@ crossorigin=""/>
 <div class="modal-body text-size-14px text-justify scrollbar-inside2">
 
 <div class="source">
-  <p lang="fr">Le projet <i>ScenTree</i> est né il y a deux ans. Depuis ce moment, nous travaillons à l'amélioration du site internet, de son contenu et à l'incrémantation de la base de données. Nous avons choisi de créer cette fenêtre d'informations afin de vous tenir au courant des nouveautés et des mises à jour hebdomadaires du site. Ainsi, chaque dimanche soir, entre 5 et 7 nouveaux ingredients (et leurs monographies) sont ajoutés dans la classification.</p>
+  <p lang="fr">Le projet <i>ScenTree</i> est né il y a deux ans. Depuis ce moment, nous travaillons à l'amélioration du site internet, de son contenu et à l'incrémantation de la base de données. Nous avons choisi de créer cette fenêtre d'informations afin de vous tenir au courant des nouveautés et des mises à jour hebdomadaires du site. Ainsi, <b>chaque dimanche soir, entre 5 et 7 nouveaux ingredients (et leurs monographies) sont ajoutés dans la classification.</b></p>
   <div class="col-12" style="height: 10px;"></div>
   <p lang="fr">Voici une liste chronologique retraçant les dates de publication des ingrédients ainsi que les étapes marquantes du projet et de son développement général : </p>
   <p lang="en"><i>ScenTree</i> project was born two years ago. Since then, we have been working on the enhancement of the website, its content and the increment of the database. We created this news window to keep you informed about the weekly website updates. Thus, every Sunday night, 5 to 7 new ingredients (and their monographs) will be added in the classification.</p>
