--- a/html/_/supporters.html
+++ b/html/_/supporters.html
@@ -77,7 +77,7 @@ crossorigin=""/>
     <li>DURIEZ Jean-Michel<i class="profession"><span lang="fr"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></i></li>
     <li>FALIU Juliette<i class="profession"><span lang="fr"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en"> (Consultant and Writer at Le Nez Bavard)</span></i></li>
 
-    <li style="font-weight: bold; color: red;">FRACHON Axelle<i class="profession"><span lang="fr"> </span><span lang="en"> </span></i></li>
+    <li style="font-weight: bold; color: red;">FRACHON Axelle<i class="profession"><span lang="fr"> (Formatrice Parfum)</span><span lang="en"> (Perfume Trainer)</span></i></li>
 
     <li>LEMONNIER Aymeric <i class="profession"><span lang="fr"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Perfumer intern at MAELSTROM Parfumeurs)</span></i></li>
     <li>MORVAN Axel<i class="profession"><span lang="fr"> (Parfumeur Analyste)</span><span lang="en"> (Analyst Perfumer)</span></i></li>
