--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -58,6 +58,16 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h3 id="heading15"><span lang="fr">12 janvier 2020</span><span lang="en">12<sup>th</sup> january 2020</span>
+          </h3>
+          <p>
+            <span lang="fr">Amélioration de la barre de recherche</span><span lang="en"Search bar improvement </span> 
+            <br><span lang="fr">Amélioration de la base de donnée</span><span lang="en"DataBase improvement </span>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h3 id="heading14"><span lang="fr">5 janvier 2020</span><span lang="en">5<sup>th</sup> january 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 7 nouvelles matières premières</span><span lang="en" class="ajoutMP">7 new ingredients added </span>
           </h3>
