--- a/html/_/index.html
+++ b/html/_/index.html
@@ -120,7 +120,7 @@ crossorigin=""/>
         <!--<a class="col-12  mt-1 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/newletter.html">
           <span lang="fr">Newletter</span><span lang="en">Newletter</span>
         </a>-->
-        <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/sources.html">
+        <a class="col-12 mt-1 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/sources.html">
           <span lang="fr">Sources</span><span lang="en">Sources</span>
         </a>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/contacts.html">
