--- a/html/_/index.html
+++ b/html/_/index.html
@@ -135,7 +135,7 @@ crossorigin=""/>
           <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
       </div>
     </div>
-   <div class="copyright row  d-none d-sm-none d-md-block">
+   <div class="copyright row mt-2 d-none d-sm-none d-md-block">
         <sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
    </div>
   </div>
