--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -61,8 +61,8 @@ crossorigin=""/>
           <h3 id="heading15"><span lang="fr">12 janvier 2020</span><span lang="en">12<sup>th</sup> january 2020</span>
           </h3>
           <p>
-            <span lang="fr">Amélioration de la barre de recherche</span><span lang="en"Search bar improvement </span> 
-            <br><span lang="fr">Amélioration de la base de donnée</span><span lang="en"DataBase improvement </span>
+            <span lang="fr">Amélioration de la barre de recherche</span><span lang="en">Search bar improvement </span> 
+            <br><span lang="fr">Amélioration de la base de donnée</span><span lang="en">DataBase improvement </span>
           </p>
         </div>
       </li>
