--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -58,6 +58,21 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h3 id="heading16"><span lang="fr">26 janvier 2020</span><span lang="en">26<sup>th</sup> january 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 6 nouvelles matières premières</span><span lang="en" class="ajoutMP">6 new ingredients added </span>
+          </h3>
+          <p>
+              <a class="interpop" href="../ingredients/Terpinen-4-ol__Terpinène-4-ol.html"><span lang="en">Terpinen-4-ol (CAS N°: 562-74-3)</span><span lang="fr">Terpinène-4-ol (CAS N°: 562-74-3)</span></a>
+              <br><a class="interpop"  href="../ingredients/Floralozone®__Floralozone®.html"><span lang="en">Floralozone<sup>®</sup> (CAS N°: 67634-15-5, 67634-14-4)</span><span lang="fr">Floralozone<sup>®</sup> (CAS N°: 67634-15-5, 67634-14-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Basil_(Linalool_Chemotype)_EO__Basilic_Grand_Vert_HE.html"><span lang="en">Basil (Linalool Chemotype) EO (CAS N°: 8015-73-4)</span><span lang="fr">Basilic Grand Vert HE (CAS N°: 8015-73-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Magnolia_Flower_EO__Magnolia_Fleur_HE.html"><span lang="en">Magnolia Flower EO (CAS N°: 8006-76-6)</span><span lang="fr">Magnolia Fleur HE (CAS N°: 8006-76-6)</span></a>
+              <br><a class="interpop"  href="../ingredients/Acetaldehyde__Acétaldéhyde.html"><span lang="en">Acetaldehyde (CAS N°: 75-07-0)</span><span lang="fr">Acétaldéhyde (CAS N°: 75-07-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Frangipani_Absolute__Frangipanier_Absolue.html"><span lang="en">Frangipani_Absolute (CAS N°: 94350-02-4)</span><span lang="fr">Frangipanier Absolue (CAS N°: 94350-02-4)</span></a>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h3 id="heading15"><span lang="fr">12 janvier 2020</span><span lang="en">12<sup>th</sup> january 2020</span>
           </h3>
           <p>
@@ -74,7 +89,7 @@ crossorigin=""/>
           <p>
               <a class="interpop" href="../ingredients/Benzophenone__Benzophénone.html"><span lang="en">Benzophenone (CAS N°: 119-61-9)</span><span lang="fr">Benzophénone (CAS N°: 119-61-9)</span></a>
               <br><a class="interpop"  href="../ingredients/Acetophenone__Acétophénone.html"><span lang="en">Acetophenone (CAS N°: 98-86-2)</span><span lang="fr">Acétophénone (CAS N°: 98-86-2)</span></a>
-              <br><a class="interpop"  href="../ingredients/Dimetol®__Dimetol®.html"><span lang="en">Dimetol<sup>®</sup> (CAS N°: 113254-34-7)</span><span lang="fr">Dimétol<sup>®</sup> (CAS N°: 113254-34-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Dimétol®__Dimetol®.html"><span lang="en">Dimetol<sup>®</sup> (CAS N°: 113254-34-7)</span><span lang="fr">Dimétol<sup>®</sup> (CAS N°: 113254-34-7)</span></a>
               <br><a class="interpop"  href="../ingredients/Grisalva®__Grisalva®.html"><span lang="en">Grisalva<sup>®</sup> (CAS N°: 68611-23-4)</span><span lang="fr">Grisalva<sup>®</sup> (CAS N°: 68611-23-4)</span></a>
               <br><a class="interpop"  href="../ingredients/Delta-3-Carene__Carène-Delta-3.html"><span lang="en">Delta-3-Carene (CAS N°: 13466-78-9)</span><span lang="fr">Carène-Delta-3 (CAS N°: 13466-78-9)</span></a>
               <br><a class="interpop"  href="../ingredients/Dalmatian_Sage_EO__Sauge_Officinale_HE.html"><span lang="en">Dalmatian Sage EO (CAS N°: 8022-56-8)</span><span lang="fr">Sauge Officinale HE (CAS N°: 8022-56-8)</span></a>
