--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -123,7 +123,7 @@ crossorigin=""/>
           </h3>
           <p>
               <a class="interpop"  href="../ingredients/Brown_Rum_Absolute__Rhum_Brun_Absolue.html"><span lang="en">Brown Rum Absolute (CAS N°: 90604-30-1)</span><span lang="fr">Rhum Brun Absolue (CAS N°: 90604-30-1)</span></a>
-              <br><a class="interpop"  href="../ingredients/Vetiver_Haiti_EO__Vétiver_Haiti_HE.html"><span lang="en">Vetiver Haiti EO (CAS N°: 8016-96-4)</span><span lang="fr">Vétiver Haiti HE (CAS N°: 8016-96-4)</span></a>
+              <br><a class="interpop"  href="../ingredients/Vetiver_Haiti_EO__Vétiver_Haïti_HE.html"><span lang="en">Vetiver Haiti EO (CAS N°: 8016-96-4)</span><span lang="fr">Vétiver Haïti HE (CAS N°: 8016-96-4)</span></a>
               <br><a class="interpop"  href="../ingredients/Nectarol®__Nectarol®.html"><span lang="en">Nectarol<sup>®</sup> (CAS N°: BASE)</span><span lang="fr">Nectarol<sup>®</sup> (CAS N°: BASE)</span></a>
               <br><a class="interpop"  href="../ingredients/Amyris_EO__Amyris_HE.html"><span lang="en">Amyris EO (CAS N°: 8015-65-4)</span><span lang="fr">Amyris HE (CAS N°: 8015-65-4)</span></a>
               <br><a class="interpop"  class="interpop"  href="../ingredients/Cocoa_Absolute__Cacao_Absolue.html"><span lang="en">Cocoa Absolute (CAS N°: 8002-31-1)</span><span lang="fr">Cacao Absolue (CAS N°: 8002-31-1)</span></a>
