--- a/html/_/sources.html
+++ b/html/_/sources.html
@@ -78,6 +78,8 @@ crossorigin=""/>
   <p><b><span lang="fr">Sites internets :</span><span lang="en">Websites : </span></b>
   <ul>
     <li><a href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
+    <li><a href="https://ifrafragrance.org/safe-use/standards-guidance" target ="_BLANK"> https://ifrafragrance.org/safe-use/standards-guidance </a></li>
+    <li><a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target ="_BLANK"><span lang="fr"> Règlement (CE) N<sup>o</sup> 1223/2009 du Parlement européen et du Conseil du 30 novembre 2009 relatif aux produits cosmétiques </span><span lang="en"> Regulation (EC) N<sup>o</sup> 1223/2009 of the european parliament and of the council of 30<sup>th</sup> November 2019 on cosmetic products</span></a></li>
     <li><a href="https://www.sigmaaldrich.com" target ="_BLANK"> https://www.sigmaaldrich.com </a></li>
     <li><a href="https://www.thegoodscentscompany.com" target ="_BLANK"> https://www.thegoodscentscompany.com </a></li>
     <li><a href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
