--- a/html/_/index.html
+++ b/html/_/index.html
@@ -401,7 +401,7 @@ crossorigin=""/>
 <div class="container-fluid"> 
 <div class="row">
 
-<div class="col-12">
+<div class="col-12" style="background-color: blue; ">
 
   <p><h1 class="item d-inline text-size-16px"><span><b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b><b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b></h1><span id="modalbody-allergenes" class="textitem"></span></span></p>
 
