--- a/html/_/index.html
+++ b/html/_/index.html
@@ -407,10 +407,14 @@ crossorigin=""/>
 <div class="row col-12" style="background-color: red; width: 100%;">
   <h2 class="d-inline item text-size-16px"><span><b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b><b lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</b></h2>
   <br>
-  <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-fill nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false" class="nav-link active" id="pills-tab49"><span lang="fr">49ème amendement</span><span lang="en">49th amendement</span></a></li>
-    <li class="nav-item"><a href="#tab48info" data-toggle="pill" aria-controls="tab48info" aria-selected="true" class="nav-link" id="pills-tab48"><span lang="fr">48ème amendement</span><span lang="en">48th amendement</span></a></li>
-  </ul>
+  
+  <!--Onglets pour les amendements IFRA-->
+  <h3 class="collapse navbar-collapse text-size-16px" id="navbarForIFRAnat">
+    <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-fill nav-justified  mx-auto" role="tablist">
+      <li class="nav-item"><a href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false" class="nav-link active" id="pills-tab49"><span lang="fr">49ème amendement</span><span lang="en">49th amendement</span></a></li>
+      <li class="nav-item"><a href="#tab48info" data-toggle="pill" aria-controls="tab48info" aria-selected="true" class="nav-link" id="pills-tab48"><span lang="fr">48ème amendement</span><span lang="en">48th amendement</span></a></li>
+    </ul>
+  </h3>
     
 <div class="container-fluid">
 <div class="row">
