--- a/html/_/index.html
+++ b/html/_/index.html
@@ -418,7 +418,7 @@ crossorigin=""/>
     
 <div class="container-fluid" style="background-color: blue;">
 <div class="row" style="background-color: red;">
-<div class="col-12" style="background-color: green;">
+<div class="col-12">
 <div class="blockifra1">
 
   <h2 class="amendment d-inline text-size-14px"><span><b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b><b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b></h2>
