--- a/html/_/index.html
+++ b/html/_/index.html
@@ -415,24 +415,46 @@ crossorigin=""/>
     </ul> 
   <!--</h3>-->
 
-    
+<div class="tab-pane fade" id="tab48info"   role="tabpanel" aria-labelledby="pills-tab48">    
+
 <div class="container-fluid" style="background-color: blue;">
-<div class="row" style="background-color: red;">
+<div class="row">
 <div class="col-12">
+  <!-- Block définnissant Type d'amendement, Numéro d'amendement, Commentaires-->
 <div class="blockifra1">
 
-  <h2 class="amendment d-inline text-size-14px"><span><b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b><b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b></h2>
-  <span id="modalbody-ifra" class="textitem"></span></span>
+  <h2 class="amendment d-inline text-size-14px">
+    <span>
+      <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
+      <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
+    </span>
+  </h2>
+  <span id="modalbody-ifra" class="textitem"></span>
+
   <br>
-  <h2 class="amendment d-inline text-size-14px"><span><b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b><b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b></h2>
-  <span id="modalbody-amendment" class="textitem"></span></span>
+
+  <h2 class="amendment d-inline text-size-14px">
+    <span>
+      <b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
+      <b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
+    </span>
+  </h2>
+  <span id="modalbody-amendment" class="textitem"></span>
+
   <br>
-  <h2 class="commentaires d-inline text-size-14px"><span><b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b><b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b></h2>
-    <span id="modalbody-commentifra" class="textitem"></span></span>
+
+  <h2 class="commentaires d-inline text-size-14px">
+    <span>
+      <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b>
+      <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
+    </span>  
+  </h2>
+  <span id="modalbody-commentifra" class="textitem"></span>
 </div>
 
 <div class="blocktable">
-  <div class="table-responsive text-center"><table class="table1">
+<div class="table-responsive text-center">
+    <table class="table1">
     <!-- TITRE DU TABLEAU-->
     <caption class="caption"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption> 
     <!-- EN-TETE DU TABLEAU-->
@@ -506,13 +528,15 @@ crossorigin=""/>
       <td>%</td>
       <td>%</td>
     </tr>
-  </table></div>
+  </table>
+</div>
   <p class="logoifra text-size-11px text-center text-my-grey"><span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span> </p>
 
   <p class="logoifra text-size-11px" style="margin-bottom: 0;"><span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span><span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></span>
   <br>
   <span lang="fr">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></span><span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">here</a></span></p>
 </div>
+
 </div>
 </div>
 </div>
