--- a/html/_/index.html
+++ b/html/_/index.html
@@ -400,7 +400,6 @@ crossorigin=""/>
 <div class="tab-pane fade" id="tab3info"   role="tabpanel" aria-labelledby="pills-tab3">
   <div class="container-fluid"> 
     <div class="row">
-
       <div class="col-12">
         <!--Block Allergènes-->
         <p>
@@ -413,9 +412,13 @@ crossorigin=""/>
           <span id="modalbody-allergenes" class="textitem"></span>
         </p>
         <!--Fin du block allergènes-->
-        
-      <div class="row col-12" >
-        <h2 class="d-inline item text-size-16px"><span><b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b><b lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</b></h2>
+
+  <div class="row col-12" style="background-color: green;" >
+    <h2 class="d-inline item text-size-16px">
+      <b lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b>
+      <b lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</b>
+    </h2>
+
         <br>
 
 <!--Onglets pour les amendements IFRA--> 
