--- a/html/_/index.html
+++ b/html/_/index.html
@@ -400,9 +400,9 @@ crossorigin=""/>
 <div class="tab-pane fade" id="tab3info"   role="tabpanel" aria-labelledby="pills-tab3">
   <div class="container-fluid"> 
     <div class="row">
-      <div class="col-12">
+      <div class="col-12" style="background-color: red;">
         <!--Block Allergènes-->
-        <p style="background-color: yellow;">
+        <p>
           <h1 class="item d-inline text-size-16px">
             <span>
               <b lang="fr">Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b>
