--- a/html/_/index.html
+++ b/html/_/index.html
@@ -421,7 +421,7 @@ crossorigin=""/>
           </h2>
         <br>
         <!--Onglets pour les amendements IFRA-->
-        <div class="row">
+        <div class="row col-12" style="background-color: yellow;">
             <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill nav-justified  mx-auto" role="tablist">
               <li class="nav-item"><a href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false" class="nav-link active" id="pills-tab49"><span lang="fr">49ème amendement</span><span lang="en">49th amendement</span></a></li>
               <li class="nav-item"><a href="#tab48info" data-toggle="pill" aria-controls="tab48info" aria-selected="true" class="nav-link" id="pills-tab48"><span lang="fr">48ème amendement</span><span lang="en">48th amendement</span></a></li>
