--- a/html/_/index.html
+++ b/html/_/index.html
@@ -422,7 +422,7 @@ crossorigin=""/>
         <br>
         <!--Onglets pour les amendements IFRA-->
         <div class="row col-12" style="background-color: yellow; text-align: justify;">
-            <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill justify-content-center mx-auto" role="tablist">
+            <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill justify-content-center mx-auto" role="tablist" style="display: inline;">
               <li class="nav-item">
                 <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
                   <span lang="fr">49ème amendement</span>
