--- a/html/_/index.html
+++ b/html/_/index.html
@@ -420,8 +420,14 @@ crossorigin=""/>
             <b lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</b>
           </h2>
         <br>
+
+        <!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+          ICI PROBLEME DE MISE EN FORME SUR UNE SEULE LIGNE 
+          %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+        -->
+
         <!--Onglets pour les amendements IFRA-->
-        <div class="row col-12" style="background-color: yellow; text-align: justify;">
+        <div class="row col-12" style="background-color: yellow;">
             <ul id="ongletsIFRA" class="navbar-nav nav nav-pills nav-fill justify-content-center mx-auto" role="tablist" style="display: inline;">
               <li class="nav-item">
                 <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
@@ -437,6 +443,7 @@ crossorigin=""/>
               </li>
             </ul> 
         </div>
+        
 <!--Ouverture du 48th amendement-->
 <div class="tab-pane fade" id="tab48info"   role="tabpanel" aria-labelledby="pills-tab48">    
 
